; ModuleID = '/home/carl/AnghaBench/libgit2/tests/fetchhead/extr_nonetwork.c_test_fetchhead_nonetwork__invalid_for_merge.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/fetchhead/extr_nonetwork.c_test_fetchhead_nonetwork__invalid_for_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@cleanup_repository = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"./test1\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"./test1/.git/FETCH_HEAD\00", align 1
@.str.2 = private unnamed_addr constant [57 x i8] c"49322bb17d3acc9146f98c97d078513228bbf3c0\09invalid-merge\09\0A\00", align 1
@read_noop = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [18 x i8] c"invalid for-merge\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_fetchhead_nonetwork__invalid_for_merge() #0 {
  %1 = call i32 @cl_set_cleanup(i32* @cleanup_repository, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @git_repository_init(i32* @g_repo, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 0)
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = call i32 @cl_git_rewritefile(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.2, i64 0, i64 0))
  %5 = load i32, i32* @g_repo, align 4
  %6 = load i32, i32* @read_noop, align 4
  %7 = call i32 @git_repository_fetchhead_foreach(i32 %5, i32 %6, i32* null)
  %8 = call i32 @cl_git_fail(i32 %7)
  %9 = call %struct.TYPE_2__* (...) @git_error_last()
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @git__prefixcmp(i32 %11, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0))
  %13 = icmp eq i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @cl_assert(i32 %14)
  ret void
}

declare dso_local i32 @cl_set_cleanup(i32*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_init(i32*, i8*, i32) #1

declare dso_local i32 @cl_git_rewritefile(i8*, i8*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_repository_fetchhead_foreach(i32, i32, i32*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i64 @git__prefixcmp(i32, i8*) #1

declare dso_local %struct.TYPE_2__* @git_error_last(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
